--- a/src/IntegrationTests/resources/config/application_it.properties
+++ b/src/IntegrationTests/resources/config/application_it.properties
@@ -7,6 +7,8 @@ idam.s2s-auth.url=http://localhost:10004
 
 pdf.api.url=http://localhost:10005
 
+bundle.url=${BUNDLE_URL:}
+
 documents.english.DIRECTION_ISSUED=TB-SCS-GNO-ENG-directions-notice.docx
 documents.english.DECISION_ISSUED=TB-SCS-GNO-ENG-draft-decision-notice.docx
 documents.english.ISSUE_FINAL_DECISION=TB-SCS-GNO-ENG-final-decision-notice.docx
