fix draft correction template and label SSCS-10587

--- a/src/IntegrationTests/resources/config/application_it.properties
+++ b/src/IntegrationTests/resources/config/application_it.properties
@@ -34,5 +34,9 @@ feature.work-allocation.enabled=true
 
 feature.case-access-management.enabled=true
 
+feature.postHearings.enabled=false
+
+feature.postHearingsB.enabled=false
+
 location_ref.enabled=true
 location_ref.api.url=http://localhost:10006
