Sscs 10865 panel members excluded (#3143)
* updating json used by tests
SSCS-10290

* updating json used by tests
SSCS-10290

* update json for tests
SSCS-10290

* update common number
SSCS-10290

* fix to use idamId
SSCS-10290

* changed to use the judicial ref data service
SSCS-10290

* fix dependencies
SSCS-10290

* remove debug
SSCS-10290

* remove unused function
SSCS-10290

* add mocks to functional test
SSCS-10290

* revert test change
SSCS-10290

* add extra logging
SSCS-10290

* common bump
SSCS-10290

* change logging
SSCS-10290

* commons bump
SSCS-10290

* fix merge conflict and update to use new commons and ccd
SSCS-10290

* put debug line correct
SSCS-10290

* fix merge conflict
SSCS-10290

* dont use the api
SSCS-10290

* revert to use the api and add a mock
SSCS-10290

* adding debugging
SSCS-10290

* used an actual personal code
SSCS-10290

* remove mock and update common
SSCS-10290

* undo bump
SSCS-10290

* change judicial ref data api
SSCS-10290

* change judicial ref data api
SSCS-10290

* change IdamIds to correct values
SSCS-10290

* remove uneeded logging
SSCS-10290

* code cleanup
SSCS-10290

* get panel members with common function
SSCS-10290

* when you adjourn a case, it will add the excluded panel members
SSCS-10865

* added first test
SSCS-10865

* commons bump
SSCS-10865

* if list is empty then just put the other list in
SSCS-10865

* removed extra isempty
SSCS-10865

* update json
SSCS-10865

* commons bump
SSCS-10865

* commons bump
SSCS-10865

* put the excluding panel members in sscsutil
SSCS-10865

* fix imports
SSCS-10865

* commons bump
SSCS-10865

* add new test
SSCS-10865

* commons bump
SSCS-10865

* commons bump
SSCS-10865

* commons bump
SSCS-10865

* commons bump
SSCS-10865

* add reserve check
SSCS-10865

* small refactor for excludePanelMembers
SSCS-10865

* rename variable and 

--- a/src/IntegrationTests/resources/config/application_it.properties
+++ b/src/IntegrationTests/resources/config/application_it.properties
@@ -32,6 +32,8 @@ feature.secure-doc-store.enabled=false
 
 feature.work-allocation.enabled=true
 
+feature.snl.adjournment.enabled: false
+
 feature.case-access-management.enabled=true
 
 feature.postHearings.enabled: false
