--- a/src/IntegrationTests/resources/config/application_it.properties
+++ b/src/IntegrationTests/resources/config/application_it.properties
@@ -30,7 +30,7 @@ feature.postponements.enabled=true
 
 feature.secure-doc-store.enabled=false
 
-feature.work-allocation.enabled=true
+feature.work-allocation.enabled=false
 
 feature.snl.adjournment.enabled: false
 
