--- a/src/IntegrationTests/resources/config/application_it.properties
+++ b/src/IntegrationTests/resources/config/application_it.properties
@@ -13,10 +13,12 @@ documents.english.CORRECTION_GRANTED=TB-SCS-GNO-ENG-corrected-decision-notice.do
 documents.english.DIRECTION_ISSUED=TB-SCS-GNO-ENG-directions-notice.docx
 documents.english.DECISION_ISSUED=TB-SCS-GNO-ENG-draft-decision-notice.docx
 documents.english.ISSUE_FINAL_DECISION=TB-SCS-GNO-ENG-final-decision-notice.docx
+documents.english.SOR_WRITE=TB-SCS-GNO-ENG-final-decision-notice.docx
 documents.welsh.CORRECTION_GRANTED=TB-SCS-GNO-ENG-corrected-decision-notice.docx
 documents.welsh.DIRECTION_ISSUED=TB-SCS-GNO-WEL-00473.docx
 documents.welsh.DECISION_ISSUED=TB-SCS-GNO-WEL-00473.docx
 documents.welsh.ISSUE_FINAL_DECISION=TB-SCS-GNO-ENG-final-decision-notice.docx
+documents.welsh.SOR_WRITE=TB-SCS-GNO-ENG-final-decision-notice.docx
 
 evidence.english.template=TB-SCS-GNO-ENG-00012.docx
 evidence.english.hmctsImgVal="[userImage:hmcts.png]"
