--- a/src/IntegrationTests/resources/config/application_it.properties
+++ b/src/IntegrationTests/resources/config/application_it.properties
@@ -41,3 +41,5 @@ feature.postHearingsB.enabled: false
 
 location_ref.enabled=true
 location_ref.api.url=http://localhost:10006
+
+feature.elasticsearch.enabled=true
