SSCSSI-34: Initial merge of test es packages into tribs

--- a/src/IntegrationTests/resources/config/application_es_it.properties
+++ b/src/IntegrationTests/resources/config/application_es_it.properties
@@ -30,7 +30,7 @@ cover.welsh=TB-SCS-LET-WEL-Cover-Letter.docx
 
 feature.postponements.enabled=true
 
-feature.secure-doc-store.enabled=false
+feature.secure-doc-store.enabled=true
 
 feature.work-allocation.enabled=true
 
